[package]
name = "stlutil"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
windows-core = "^0.58.0"

[dependencies.windows-targets]
version = "^0.52"

[dev-dependencies.windows-bindgen]
version = "^0.58"

[dependencies.windows]
version = "^0.58.0"
features = [
    "Graphics",
    "Graphics_Printing3D",
]
